tests/neg/stackoverflowmacro/2_Use.scala
object Use {
  def Test = scala.compiletime.testing.typeCheckErrors("stackOverflowMacro") // error
}
